--- a/UFO-level-2/index2.html
+++ b/UFO-level-2/index2.html
@@ -65,7 +65,7 @@
                   <th class="table-head">Comments</th>
                 </tr>
               </thead>
-              <tbody>ADD CODE HERE</tbody>
+              <tbody></tbody>
             </table>
           </div>
         </div>
